Style: apply formatting and cleanup pass across the codebase